	PR c++/58954 	* pt.c (resolve_overloaded_unification): Use instantiate_template.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@205952 138bc75d-0d04-0410-961f-82ee72b054a4